...
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"></com.anychart.AnyChartView>

    <TextView
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:id="@+id/OnTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
